syntax = "proto3";

option csharp_namespace = "Tagly.Grpc";

package auth;

service Auth {
  rpc Login (AuthRequest) returns (AuthReply);
}

message AuthRequest {
  string import_token = 1;
}

message AuthReply {
  string jwt_token = 1;
}
